Added A Gallery & Events Page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="sub-menu">
             <ul class="submenu">
               <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Events</a>
+                <a href="/src/pages/events.html" class="nav-links">Events</a>
               </li>
               <li class="nav-items">
                 <a href="/src/pages/history.html" class="nav-links">Individual Downloadable Letters</a>
@@ -101,7 +101,7 @@
            <div class="sub-menu">
              <ul class="submenu">
                <li class="nav-items">
-                 <a href="/src/pages/history.html" class="nav-links">Gallery</a>
+                 <a href="/src/pages/gallery.html" class="nav-links">Gallery</a>
                </li>
                <li class="nav-items">
                 <a href="/src/pages/resources.html" class="nav-links">Archive</a>
@@ -185,7 +185,7 @@
           <div class="mission">
             <h3 class="intro">Mission</h3>
             <p>
-              Commited to Providing competency training, mentoring, community
+              Commited to providing competency training, mentoring, community
               extension, and skills development to School Registars and Records
               Personnel
             </p>
@@ -197,7 +197,7 @@
           <div class="vision">
             <h3 class="intro">Vision</h3>
             <p>
-              Providing a holistic eevelopment avenue for School Registars and
+              Providing a holistic development avenue for School Registars and
               Records Personnel
             </p>
             <div class="logos">
