--- a/src/pages/history.html
+++ b/src/pages/history.html
@@ -25,7 +25,6 @@
     />
   </head>
 
- 
   <header>
     <nav class="navbar">
       <div class="logo">
@@ -80,36 +79,38 @@
         </li>
 
         <li class="nav-items subs">
-         Annoucements
+          Annoucements
           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
           <div class="sub-menu">
             <ul class="submenu">
               <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Events</a>
+                <a href="/src/pages/events.html" class="nav-links">Events</a>
               </li>
               <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Individual Downloadable Letters</a>
+                <a href="/src/pages/history.html" class="nav-links"
+                  >Individual Downloadable Letters</a
+                >
               </li>
-            
             </ul>
           </div>
         </li>
 
         <li class="nav-items subs">
           Resources
-           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
-           <div class="sub-menu">
-             <ul class="submenu">
-               <li class="nav-items">
-                 <a href="/src/pages/history.html" class="nav-links">Gallery</a>
-               </li>
-               <li class="nav-items">
-                <a href="/src/pages/resources.html" class="nav-links">Archive</a>
+          <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
+          <div class="sub-menu">
+            <ul class="submenu">
+              <li class="nav-items">
+                <a href="/src/pages/gallery.html" class="nav-links">Gallery</a>
               </li>
-             </ul>
-           </div>
-         </li>
-         
+              <li class="nav-items">
+                <a href="/src/pages/resources.html" class="nav-links"
+                  >Archive</a
+                >
+              </li>
+            </ul>
+          </div>
+        </li>
 
         <li class="nav-items">
           <a href="/src/pages/contact-us.html" class="nav-links">Contact Us</a>
@@ -123,8 +124,6 @@
       </div>
     </nav>
   </header>
-
-
 
   <body>
     <main>
@@ -140,19 +139,14 @@
             scenic spot of Caliraya Lake in a resort owned by the Sobrepena’s
             where this body was formally organized. The association was then
             recognized as the Association of Registrars and Liaison Officers
-            Region IV (ARLO R-IV).
-
-            <br /><br />
-            The main objective of the association is to maintain a strong
-            network of institutions in Region IV in order to establish an
-            effective, fastest and easiest way of sending and transmitting
-            papers and other documents from DECS IV- HED to Higher Education
-            Institutions in the Region. The association has been an effective
-            network that has been supporting DECS IV- HED and its activities
-            since then.
-            <br /><br />
-
-            The association became the avenue where the Registrars and Liaison
+            Region IV (ARLO R-IV). <br /><br />The main objective of the
+            association is to maintain a strong network of institutions in
+            Region IV in order to establish an effective, fastest and easiest
+            way of sending and transmitting papers and other documents from DECS
+            IV- HED to Higher Education Institutions in the Region. The
+            association has been an effective network that has been supporting
+            DECS IV- HED and its activities since then. <br /><br />The
+            association became the avenue where the Registrars and Liaison
             Officers and other personnel of the Registrar’s Office come together
             to learn and discover the best practices in the Region. This is
             where the DECS IV- HED and later on the Commission on Higher
@@ -164,100 +158,95 @@
             next forum, activities and assemblies of the association. The
             officers and its members have developed a strong camaraderie where
             each member felt a sense of belongingness.
-            <br /><br />
 
-            On May 9, 2001, the association was registered with the Securities
-            and Exchange Commission and was named the “Association of School
-            Registrars and Liaison Officers in Region IV” (ARSLO) with SEC
-            Registration No. A200015235. However, with the implementation of
+            <br /><br />On May 9, 2001, the association was registered with the
+            Securities and Exchange Commission and was named the “Association of
+            School Registrars and Liaison Officers in Region IV” (ARSLO) with
+            SEC Registration No. A200015235. However, with the implementation of
             Executive Order No. 103, dated May 17, 2002, where Region IV was
             split into two separate regions, Region IV-A (Calabarzon) and Region
             IV-B (Mimaropa) the association decided to give the original name
             ‘Association of Registrars and Liaison Officers Region IV” (ARLO
-            RIV) to Region IV-B (Mimaropa).
-
-            <br /><br />
-
-            Region IV-A created a new name for the association and is now
-            officially known as the “Association of College Registrars and
-            Liaison Officers in Region IV-A Inc. (ACURLO RIV-A)”, registered
-            with the Securities and Exchange Commission on August 28, 2013 with
-            Sec Registration No. CN201316597.
-
-            <br /><br />
-            One of the significant contributions of the association in the
-            Region is the publication of the first Manual for School Registrars
-            in 2009. It has become the source of information, and a tool that
-            provides the Registrars and Liaison Officers with general
-            information on policies, standards, and processes in the performance
-            of their functions. The manual also contains relevant Memoranda and
-            Circulars that serve as their reference in the overall school
-            operations.
-            <br /><br />
-            With the intention of the association to introduce to the member
-            schools the new trends on student records management, the Officers
-            initiated series of forums and assemblies to come up with standard
-            processes on major issues and concerns that are being faced by the
-            Registrars and Liaison Officers. The first Handbook “ACURLO’s
-            Handbook Vol. 1 ‘Output of Focus Group Discussion’ was produced and
-            distributed last September 2016 to its member schools during its
-            30th General Assembly in Baguio City.
-            <br /><br />
-            On the same occasion, the creation of the Admissions Officers
-            Association in the Region was initiated by ACURLO. It was named
-            University, College and School Admissions Officers Association R-IVA
-            (USCA R-IVA). Its main objective is to establish admission policies
-            and standards that would complement the policies and standards set
-            by the ACURLO.
-            <br /><br />
-            The association continues to live by its vision and mission to serve
-            and be an inspiration to the Region. It aspires to bring together
-            the Registrars and Liaison Officers of Higher Education Institutions
-            in Region IV as one family moving towards the realization of its
-            ultimate objective of providing excellent services to its clients.
+            RIV) to Region IV-B (Mimaropa). <br /><br />Region IV-A created a
+            new name for the association and is now officially known as the
+            “Association of College Registrars and Liaison Officers in Region
+            IV-A Inc. (ACURLO RIV-A)”, registered with the Securities and
+            Exchange Commission on August 28, 2013 with Sec Registration No.
+            CN201316597.
           </p>
         </div>
 
         <div class="part-two">
           <p>
-            <span>People</span> from other Regions wonder what the acronym ASRLO means. For
-          some occasions the national organization could not fathom why in
-          Southern Tagalog ASRLO was born.
-          <br /><br> 
-          More often than we realize, there are people in the organization
-          that make decisions in the absence of the person in the position.
-          This has been the observation of our own staff in the early days of
-          Higher Education Division under the Department of Education, Culture
-          and Sports, Region IV. At the time, almost fifty percent (50%) of
-          our clients were liaison officers. The registrars of the school were
-          either doing their functions in schools or they prefer to delegate
-          the work of making submission and follow – up of papers in the
-          Office. It was felt that the Liaison Officers and Registrars had a
-          shared action wherein they were bound together around a common
-          identity and sense of destiny to excel, learn and provide services
-          to their clients. They possess a set of governing values by which
-          they behave and regard their customers, community, and other publics
-          as valuable components to their work. On that score it was observed
-          further that the registrars and liaison officers were able to speak
-          easier, to speak honestly or to reveal information on whatever
-          agreed-upon values there were. The implications here were apparent
-          for fostering the kind of supportive environment in which knowledge
-          sharing flourished.
-          <br /><br />
-          It was such a significant summer of 1985 when a group of supportive
-          staff from HED-DECS IV with registrars and liaison officers were
-          gathered in a scenic spot of Caliraya Lake in a resort owned by the
-          Sobrepena’s where this body was formally organized. There were a few
-          officers who were very active that pursued the objectives of the
-          said organization. With them, the job of sending and transmitting
-          paper and other documents were made much easier and pleasantries of
-          both the service agency and the institutions being served had been
-          fruitful. From then on, the organization guided most administrators
-          on what they want from the regulatory agencies.
-          <br /><br />
-          This was the simple and significant development of the organization
-          of ASRLO R-IV which is now Association of College and University
-          Registrars and Liaison Officers, Region IV-A (ACURLO RIV-A).
+            <span>One</span> of the significant contributions of the association
+            in the Region is the publication of the first Manual for School
+            Registrars in 2009. It has become the source of information, and a
+            tool that provides the Registrars and Liaison Officers with general
+            information on policies, standards, and processes in the performance
+            of their functions. The manual also contains relevant Memoranda and
+            Circulars that serve as their reference in the overall school
+            operations.
+
+            <br /><br />With the intention of the association to introduce to
+            the member schools the new trends on student records management, the
+            Officers initiated series of forums and assemblies to come up with
+            standard processes on major issues and concerns that are being faced
+            by the Registrars and Liaison Officers. The first Handbook “ACURLO’s
+            Handbook Vol. 1 ‘Output of Focus Group Discussion’ was produced and
+            distributed last September 2016 to its member schools during its
+            30th General Assembly in Baguio City.
+
+            <br /><br />On the same occasion, the creation of the Admissions
+            Officers Association in the Region was initiated by ACURLO. It was
+            named University, College and School Admissions Officers Association
+            R-IVA (USCA R-IVA). Its main objective is to establish admission
+            policies and standards that would complement the policies and
+            standards set by the ACURLO.
+
+            <br /><br />During its 5th Registrars' Forum held at the University
+            of Perpetual Help System - Laguna in Binan City on December 6, 2018,
+            ACURLO RIV-A, Inc. launched the ACURLO PLUS - Promoting Love, Unity,
+            and Service. The ACURLO PLUS program aimed to a) provide
+            opportunities for ACURLO members to raise their awareness on social
+            consciousness, responsibility, and involvement; b) provide avenue to
+            share one’s time, talent, expertise, and resources to help improve
+            the quality of work life of its members and targeted beneficiaries;
+            and c) promote and strengthen camaraderie and volunteerism among its
+            members.
+
+            <br /><br />The Laguna Cluster conducted the first ACURLO PLUS
+            project, with Bahay ni Maria in Calamba, a home for abandoned
+            elderly people with special needs, as its first recipient. Two
+            ACURLO PLUS projects were completed successfully in 2019. The Quezon
+            Cluster organized a gift-giving event at Sinag Kalinga in Lucban,
+            Quezon. Sinag Kalinga is a non-profit organization that provides
+            hospice care to impoverished and abandoned elders. Another project
+            is a free training course for newly appointed registrars with the
+            theme, “Relearning the Basics of Registrarship,” which was held on
+            May 8, 2019, at De La Salle Lipa.
+
+            <br /><br />In its desire to improve the performances of the
+            Registrars’ offices in Region IVA and be at par with the quality of
+            services being provided by its counterparts abroad, the ACURLO in
+            2018 and 2019, conducted benchmarking activities in some of the
+            prestigious universities in Thailand and Taiwan.
+
+            <br /><br />In the recent conventions and fora organized by the
+            association, a number of participants were from outside of Region
+            IVa. This motivated the ACURLO to dream big to expand the
+            association’s membership. Thus, in 2019, during its 33rd Annual
+            Regional Convention held in Boracay, Aklan the new name of the
+            association was launched.
+
+            <br /><br />The association’s new name became University, College,
+            and School Registrars Association (UCSRA), Inc. The new name was
+            registered with the Securities and Exchange Commission with SEC
+            Registration No. CN201955206. The association continues to live by
+            its vision and mission to serve and be an inspiration to the Region.
+            It aspires to bring together the registrars and records personnel of
+            universities, colleges, and schools as one family moving towards the
+            realization of its ultimate objective of providing excellent
+            services to its clients.
           </p>
         </div>
       </section>
@@ -276,10 +265,15 @@
             <p>Telephone No. (049) 545 5453</p>
 
             <span>Facebook: </span
-            ><a href="">College &amp; School Registars Association</a>
+            ><a
+              href="https://www.facebook.com/profile.php?id=100068724562502"
+              target="_blank"
+              ><i class="fa-brands fa-facebook fa-lg"></i> USCRA - University,
+              College, and School Registrars Association Inc.</a
+            >
             <span>Email Address: </span
             ><a href="mailto: ucsra.inc@gmail.com"
-              >College &amp; School Registars Association</a
+              ><i class="fa-solid fa-envelope fa-lg"></i> ucsra.inc@gmail.com</a
             >
           </div>
         </div>
