--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -84,7 +84,7 @@
           <div class="sub-menu">
             <ul class="submenu">
               <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Events</a>
+                <a href="/src/pages/events.html" class="nav-links">Events</a>
               </li>
               <li class="nav-items">
                 <a href="/src/pages/history.html" class="nav-links">Individual Downloadable Letters</a>
@@ -100,7 +100,7 @@
            <div class="sub-menu">
              <ul class="submenu">
                <li class="nav-items">
-                 <a href="/src/pages/history.html" class="nav-links">Gallery</a>
+                <a href="/src/pages/gallery.html" class="nav-links">Gallery</a>
                </li>
                <li class="nav-items">
                 <a href="/src/pages/resources.html" class="nav-links">Archive</a>
@@ -582,10 +582,15 @@
             <p>Telephone No. (049) 545 5453</p>
 
             <span>Facebook: </span
-            ><a href="">College &amp; School Registars Association</a>
+            ><a
+              href="https://www.facebook.com/profile.php?id=100068724562502"
+              target="_blank"
+              ><i class="fa-brands fa-facebook fa-lg"></i> USCRA - University,
+              College, and School Registrars Association Inc.</a
+            >
             <span>Email Address: </span
             ><a href="mailto: ucsra.inc@gmail.com"
-              >College &amp; School Registars Association</a
+              ><i class="fa-solid fa-envelope fa-lg"></i> ucsra.inc@gmail.com</a
             >
           </div>
         </div>
