Putting the logo on the mission and vision section

--- a/src/pages/misvis.html
+++ b/src/pages/misvis.html
@@ -176,6 +176,12 @@
           </ul>
       </section>
 
+
+      <section class="Logo">
+        <div class="main-Logo">
+          <img src="/assets/logo/NewLogo.png" alt="">
+        </div>
+      </section>
     </main>
     <footer>
       <section class="footer">
