--- a/src/pages/history.html
+++ b/src/pages/history.html
@@ -87,7 +87,7 @@
                 <a href="/src/pages/events.html" class="nav-links">Events</a>
               </li>
               <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links"
+                <a href="#" class="nav-links"
                   >Individual Downloadable Letters</a
                 >
               </li>
@@ -258,7 +258,7 @@
             <h1>Contact Us</h1>
             <p>We Can Help</p>
             <p>our team of experts is on hand to</p>
-            <p>answers your questionss</p>
+            <p>answer your questions</p>
           </div>
 
           <div class="numbers">
