--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -87,7 +87,7 @@
                 <a href="/src/pages/events.html" class="nav-links">Events</a>
               </li>
               <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Individual Downloadable Letters</a>
+                <a href="#" class="nav-links">Individual Downloadable Letters</a>
               </li>
             
             </ul>
@@ -575,7 +575,7 @@
             <h1>Contact Us</h1>
             <p>We Can Help</p>
             <p>our team of experts is on hand to</p>
-            <p>answers your questionss</p>
+            <p>answer your questions</p>
           </div>
 
           <div class="numbers">
