--- a/src/pages/events.html
+++ b/src/pages/events.html
@@ -145,7 +145,7 @@
                 <p class="Date">Performing Arts Theater</p>
                 <p class="Date">University of Perpetual Help System Laguna</p>
                 <div class="reg-now">
-                  <a href="">Register Now</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeUALDX3LnI6irlE0T3M2B08MaWTePSiDsewa5HHmmkGIBwjA/viewform" target="_blank">Register Now</a>
                 </div>
               </div>
               <div class="main-info one">
@@ -158,7 +158,7 @@
                 <p class="Date">Performing Arts Theater</p>
                 <p class="Date">University of Perpetual Help System Laguna</p>
                 <div class="reg-now">
-                  <a href="">Register Now</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeUALDX3LnI6irlE0T3M2B08MaWTePSiDsewa5HHmmkGIBwjA/viewform">Register Now</a>
                 </div>
               </div>
             </div>
